Add footnote support to rmarkdown/pandoc

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,11 +10,11 @@ Description: A set of functions aiming to strengthen the functionality of
 License: MIT + file LICENSE
 LazyData: TRUE
 Depends:
-    R (>= 3.1.2)
+    R (>= 3.1.2),
+    stringr (>= 1.0)
 Imports:
     knitr (>= 1.10),
-    magrittr,
-    stringr (>= 1.0)
+    magrittr
 Suggests:
     testthat
-RoxygenNote: 5.0.0
+RoxygenNote: 5.0.1
