--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,8 @@ Imports:
     knitr (>= 1.10),
     magrittr,
     stringr (>= 1.0),
-    XML
+    XML,
+    rmarkdown (>= 0.2.64)
 Suggests:
     testthat
 RoxygenNote: 5.0.1
