--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,8 @@ Description: A set of functions aiming to strengthen the functionality of
     knitr::kable without destroying its simplicity by adopting pipe syntax.
 License: MIT + file LICENSE
 LazyData: TRUE
+URL: https://github.com/haozhu233/kableExtra
+BugReports: https://github.com/haozhu233/kableExtra/issues
 Depends:
     R (>= 3.1.2)
 Imports:
@@ -20,4 +22,5 @@ Imports:
     rmarkdown (>= 0.2.64)
 Suggests:
     testthat
+VignetteBuilder: knitr
 RoxygenNote: 5.0.1
