Add htmlTable_styling; Improve old functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,11 @@
 
 export("%>%")
 export(add_footnote)
+export(htmlTable_styling)
 export(magic_mirror)
 export(rmd_format)
 import(stringr)
 importFrom(XML,readHTMLTable)
 importFrom(knitr,kable)
 importFrom(rmarkdown,metadata)
+importFrom(stringr,str_count)
