--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,17 @@
 
 export("%>%")
 export(add_footnote)
+export(htmlTable_add_header_above)
 export(htmlTable_styling)
 export(magic_mirror)
 export(rmd_format)
 import(stringr)
-importFrom(XML,readHTMLTable)
 importFrom(knitr,kable)
 importFrom(rmarkdown,metadata)
+importFrom(rvest,html_table)
 importFrom(stringr,str_count)
+importFrom(xml2,"xml_attr<-")
+importFrom(xml2,read_html)
+importFrom(xml2,read_xml)
+importFrom(xml2,xml_attr)
+importFrom(xml2,xml_has_attr)
