--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,5 +14,10 @@ importFrom(stringr,str_count)
 importFrom(xml2,"xml_attr<-")
 importFrom(xml2,read_html)
 importFrom(xml2,read_xml)
+importFrom(xml2,xml_add_child)
+importFrom(xml2,xml_add_sibling)
 importFrom(xml2,xml_attr)
+importFrom(xml2,xml_child)
+importFrom(xml2,xml_children)
 importFrom(xml2,xml_has_attr)
+importFrom(xml2,xml_name)
