--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,14 @@
 
 export("%>%")
 export(add_footnote)
-export(htmlTable_add_header_above)
-export(htmlTable_styling)
+export(add_header_above)
+export(kable_styling)
 export(magic_mirror)
 export(rmd_format)
+export(usepackage_latex)
 import(stringr)
-importFrom(knitr,kable)
+importFrom(knitr,knit_meta_add)
+importFrom(rmarkdown,latex_dependency)
 importFrom(rmarkdown,metadata)
 importFrom(rvest,html_table)
 importFrom(stringr,str_count)
