--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,8 @@ Title: Decorate kable output using pipe syntax
 Version: 0.0.1.9000
 Authors@R: c(
     person("Hao", "Zhu", email = "haozhu@hsl.harvard.edu", role = c("aut", "cre")),
-    person("Will", "Beasley", email = "wibeasley@hotmail.com", role = "ctb")
+    person("Will", "Beasley", email = "wibeasley@hotmail.com", role = "ctb"),
+    person("Yihui", "Xie", email = "xie@yihui.name", role = "ctb")
     )
 Description: A set of functions aiming to strengthen the functionality of
     knitr::kable without destroying its simplicity by adopting pipe syntax.
@@ -20,7 +21,7 @@ Imports:
     stringr (>= 1.0),
     xml2,
     rvest,
-    rmarkdown (>= 0.2.64)
+    rmarkdown (>= 1.3)
 Suggests:
     testthat
 VignetteBuilder: knitr
