finishing kable_styling

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ importFrom(rmarkdown,latex_dependency)
 importFrom(rmarkdown,metadata)
 importFrom(rvest,html_table)
 importFrom(stringr,str_count)
+importFrom(stringr,str_split)
 importFrom(xml2,"xml_attr<-")
 importFrom(xml2,read_html)
 importFrom(xml2,read_xml)
