Update readme and documentations

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,13 +7,21 @@ export(kable_styling)
 export(magic_mirror)
 export(rmd_format)
 export(usepackage_latex)
-import(stringr)
 importFrom(knitr,knit_meta_add)
+importFrom(magrittr,"%>%")
 importFrom(rmarkdown,latex_dependency)
 importFrom(rmarkdown,metadata)
 importFrom(rvest,html_table)
 importFrom(stringr,str_count)
+importFrom(stringr,str_detect)
+importFrom(stringr,str_extract)
+importFrom(stringr,str_extract_all)
+importFrom(stringr,str_match)
+importFrom(stringr,str_match_all)
+importFrom(stringr,str_replace_all)
 importFrom(stringr,str_split)
+importFrom(stringr,str_trim)
+importFrom(utils,read.csv)
 importFrom(xml2,"xml_attr<-")
 importFrom(xml2,read_html)
 importFrom(xml2,read_xml)
@@ -24,3 +32,4 @@ importFrom(xml2,xml_child)
 importFrom(xml2,xml_children)
 importFrom(xml2,xml_has_attr)
 importFrom(xml2,xml_name)
+importFrom(xml2,xml_text)
