--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: kableExtra
 Type: Package
-Title: Construct Complex Table with kable and Pipe Syntax
+Title: Construct Complex Table with Kable and Pipe Syntax
 Version: 0.1.0
 Authors@R: c(
     person("Hao", "Zhu", email = "haozhu233@gmail.com", role = c("aut", "cre")),
