--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,14 +3,14 @@ Type: Package
 Title: Construct Complex Table with Kable and Pipe Syntax
 Version: 0.1.0
 Authors@R: c(
-    person("Hao", "Zhu", email = "haozhu233@gmail.com", role = c("aut", "cre")),
-    person("Will", "Beasley", email = "wibeasley@hotmail.com", role = "ctb"),
-    person("Yihui", "Xie", email = "xie@yihui.name", role = "ctb")
+    person('Hao', 'Zhu', email = 'haozhu233@gmail.com', role = c('aut', 'cre')),
+    person('Will', 'Beasley', email = 'wibeasley@hotmail.com', role = 'ctb'),
+    person('Yihui', 'Xie', email = 'xie@yihui.name', role = 'ctb')
     )
 Description: A collection of functions to build complex HTML or LaTeX tables on top of kable output.
 License: MIT + file LICENSE
 LazyData: TRUE
-URL: http://haozhu233.github.io/kableExtra/
+URL: http://haozhu233.github.io/kableExtra/, https://github.com/haozhu233/kableExtra
 BugReports: https://github.com/haozhu233/kableExtra/issues
 Depends:
     R (>= 3.1.2)
