--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(add_footnote)
 export(add_header_above)
 export(kable_styling)
+export(landscape)
 export(magic_mirror)
 export(rmd_format)
 export(usepackage_latex)
