Added add_indent_html; Added group_rows_html;

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(add_footnote)
 export(add_header_above)
 export(add_indent)
+export(group_rows)
 export(kable_styling)
 export(landscape)
 export(magic_mirror)
@@ -25,6 +26,7 @@ importFrom(stringr,str_split)
 importFrom(stringr,str_trim)
 importFrom(utils,read.csv)
 importFrom(xml2,"xml_attr<-")
+importFrom(xml2,"xml_text<-")
 importFrom(xml2,read_html)
 importFrom(xml2,read_xml)
 importFrom(xml2,xml_add_child)
