Added column_spec function for HTML and LaTeX

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(add_footnote)
 export(add_header_above)
 export(add_indent)
+export(column_spec)
 export(group_rows)
 export(kable_styling)
 export(landscape)
