--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(rmd_format)
 export(usepackage_latex)
 importFrom(knitr,knit_meta_add)
 importFrom(magrittr,"%>%")
+importFrom(readr,read_lines)
 importFrom(rmarkdown,latex_dependency)
 importFrom(rmarkdown,metadata)
 importFrom(rvest,html_table)
