put back caption for multi-page longtable in latex

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ importFrom(stringr,str_match)
 importFrom(stringr,str_match_all)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_split)
+importFrom(stringr,str_sub)
 importFrom(stringr,str_trim)
 importFrom(utils,read.csv)
 importFrom(xml2,"xml_attr<-")
