--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(kable_styling)
 export(landscape)
 export(magic_mirror)
 export(rmd_format)
+export(row_spec)
 export(usepackage_latex)
 importFrom(knitr,knit_meta_add)
 importFrom(magrittr,"%>%")
