add collapse_rows html

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(add_footnote)
 export(add_header_above)
 export(add_indent)
+export(collapse_rows)
 export(column_spec)
 export(group_rows)
 export(kable_styling)
@@ -40,4 +41,5 @@ importFrom(xml2,xml_child)
 importFrom(xml2,xml_children)
 importFrom(xml2,xml_has_attr)
 importFrom(xml2,xml_name)
+importFrom(xml2,xml_remove)
 importFrom(xml2,xml_text)
