--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(landscape)
 export(magic_mirror)
 export(rmd_format)
 export(row_spec)
+export(scroll_box)
 export(usepackage_latex)
 importFrom(knitr,knit_meta_add)
 importFrom(magrittr,"%>%")
