--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ importFrom(xml2,"xml_attr<-")
 importFrom(xml2,"xml_text<-")
 importFrom(xml2,read_html)
 importFrom(xml2,read_xml)
+importFrom(xml2,write_xml)
 importFrom(xml2,xml_add_child)
 importFrom(xml2,xml_add_sibling)
 importFrom(xml2,xml_attr)
