--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(scroll_box)
 export(usepackage_latex)
 importFrom(knitr,knit_meta_add)
 importFrom(magrittr,"%>%")
+importFrom(readr,read_file)
 importFrom(readr,read_lines)
 importFrom(rmarkdown,latex_dependency)
 importFrom(rmarkdown,metadata)
