--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(add_indent)
 export(collapse_rows)
 export(column_spec)
 export(group_rows)
+export(kable_as_image_latex)
 export(kable_styling)
 export(landscape)
 export(magic_mirror)
@@ -14,10 +15,13 @@ export(rmd_format)
 export(row_spec)
 export(scroll_box)
 export(usepackage_latex)
+import(magick)
+importFrom(knitr,include_graphics)
 importFrom(knitr,knit_meta_add)
 importFrom(magrittr,"%>%")
 importFrom(readr,read_file)
 importFrom(readr,read_lines)
+importFrom(readr,write_file)
 importFrom(rmarkdown,latex_dependency)
 importFrom(rmarkdown,metadata)
 importFrom(rvest,html_table)
