Complete documentation for kable_as_image

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(add_indent)
 export(collapse_rows)
 export(column_spec)
 export(group_rows)
-export(kable_as_image_latex)
+export(kable_as_image)
 export(kable_styling)
 export(landscape)
 export(magic_mirror)
