--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(add_indent)
 export(collapse_rows)
 export(column_spec)
 export(group_rows)
+export(kableExtra_latex_packages)
 export(kable_as_image)
 export(kable_styling)
 export(landscape)
