--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,7 +35,8 @@ Imports:
     readr
 Suggests:
     testthat,
-    magick
+    magick,
+    formattable
 VignetteBuilder: knitr
 Encoding: UTF-8
 RoxygenNote: 6.0.1
