--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,9 @@ export(magic_mirror)
 export(rmd_format)
 export(row_spec)
 export(scroll_box)
+export(spec_angle)
+export(spec_color)
+export(spec_font_size)
 export(usepackage_latex)
 importFrom(knitr,include_graphics)
 importFrom(knitr,knit_meta_add)
@@ -25,6 +28,7 @@ importFrom(readr,read_lines)
 importFrom(rmarkdown,latex_dependency)
 importFrom(rmarkdown,metadata)
 importFrom(rvest,html_table)
+importFrom(scales,rescale)
 importFrom(stringr,str_count)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_extract)
@@ -37,6 +41,7 @@ importFrom(stringr,str_split)
 importFrom(stringr,str_sub)
 importFrom(stringr,str_trim)
 importFrom(utils,read.csv)
+importFrom(viridisLite,viridis)
 importFrom(xml2,"xml_attr<-")
 importFrom(xml2,"xml_text<-")
 importFrom(xml2,read_html)
