Fix the duplicated row bug in LaTeX table. Fix a bug introduced in #73. Change back to div for cell_spec

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,7 +34,8 @@ Imports:
     rmarkdown (>= 1.6.0),
     readr,
     scales, 
-    viridisLite
+    viridisLite,
+    stats
 Suggests:
     testthat,
     magick,
