--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(kableExtra_latex_packages)
 export(kable_as_image)
 export(kable_styling)
 export(landscape)
+export(latex_pkg_list)
 export(magic_mirror)
 export(rmd_format)
 export(row_spec)
