Add spec_tooltip & spec_popover; Update documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,8 @@ export(scroll_box)
 export(spec_angle)
 export(spec_color)
 export(spec_font_size)
+export(spec_popover)
+export(spec_tooltip)
 export(text_spec)
 export(usepackage_latex)
 importFrom(knitr,include_graphics)
