--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(spec_popover)
 export(spec_tooltip)
 export(text_spec)
 export(usepackage_latex)
+importFrom(grDevices,col2rgb)
 importFrom(knitr,include_graphics)
 importFrom(knitr,knit_meta_add)
 importFrom(magrittr,"%>%")
