--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,9 @@ export(cell_spec)
 export(collapse_rows)
 export(column_spec)
 export(footnote)
+export(footnote_marker_alphabet)
+export(footnote_marker_number)
+export(footnote_marker_symbol)
 export(group_rows)
 export(kableExtra_latex_packages)
 export(kable_as_image)
