add custom print & knit_print method to display HTML table on the run

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,7 +36,8 @@ Imports:
     scales, 
     viridisLite,
     stats,
-    grDevices
+    grDevices,
+    htmlwidgets
 Suggests:
     testthat,
     magick,
