--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: kableExtra
 Type: Package
 Title: Construct Complex Table with 'kable' and Pipe Syntax
-Version: 0.6.1.9000
+Version: 0.7.0
 Authors@R: c(
     person('Hao', 'Zhu', email = 'haozhu233@gmail.com', role = c('aut', 'cre')),
     person('Timothy', 'Tsai', role = 'ctb'),
@@ -37,7 +37,7 @@ Imports:
     viridisLite,
     stats,
     grDevices,
-    htmlwidgets
+    htmltools
 Suggests:
     testthat,
     magick,
