--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(footnote_marker_alphabet)
 export(footnote_marker_number)
 export(footnote_marker_symbol)
 export(group_rows)
+export(kable)
 export(kableExtra_latex_packages)
 export(kable_as_image)
 export(kable_styling)
@@ -33,6 +34,7 @@ import(htmltools)
 importFrom(grDevices,col2rgb)
 importFrom(knitr,asis_output)
 importFrom(knitr,include_graphics)
+importFrom(knitr,kable)
 importFrom(knitr,knit_meta_add)
 importFrom(knitr,knit_print)
 importFrom(magrittr,"%>%")
