adding some checks to disable the real-time display when RStudio is not running

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,7 +38,8 @@ Imports:
     viridisLite,
     stats,
     grDevices,
-    htmltools
+    htmltools,
+    rstudioapi
 Suggests:
     testthat,
     magick,
