--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,8 @@ importFrom(rmarkdown,html_dependency_bootstrap)
 importFrom(rmarkdown,html_dependency_jquery)
 importFrom(rmarkdown,latex_dependency)
 importFrom(rmarkdown,metadata)
+importFrom(rstudioapi,isAvailable)
+importFrom(rstudioapi,viewer)
 importFrom(rvest,html_table)
 importFrom(scales,rescale)
 importFrom(stats,ave)
