Add @georgegui to the author's list; copy docs about the stacked collapsed rows to the docs site as well.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,8 @@ Authors@R: c(
     person('Stéphane', 'Laurent', role = 'ctb'),
     person('Rob', 'Shepherd', role = 'ctb'),
     person('Yoni', 'Sidi', role = 'ctb'), 
-    person('Brian', 'Salzer', role = 'ctb')
+    person('Brian', 'Salzer', role = 'ctb'),
+    person('George', 'Gui', role = 'ctb')
     )
 Description: Build complex HTML or 'LaTeX' tables using 'kable()' from 'knitr' 
     and the piping syntax from 'magrittr'. Function 'kable()' is a light weight 
