--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(kableExtra_latex_packages)
 export(kable_as_image)
 export(kable_styling)
 export(landscape)
+export(linebreak)
 export(magic_mirror)
 export(rmd_format)
 export(row_spec)
@@ -60,6 +61,7 @@ importFrom(stringr,str_replace_all)
 importFrom(stringr,str_split)
 importFrom(stringr,str_sub)
 importFrom(stringr,str_trim)
+importFrom(utils,head)
 importFrom(utils,read.csv)
 importFrom(viridisLite,viridis)
 importFrom(xml2,"xml_attr<-")
