--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,13 @@
 Package: kableExtra
 Type: Package
 Title: Construct Complex Table with 'kable' and Pipe Syntax
-Version: 0.7.0.9000
+Version: 0.8.0
 Authors@R: c(
-    person('Hao', 'Zhu', email = 'haozhu233@gmail.com', role = c('aut', 'cre')),
+    person('Hao', 'Zhu', email = 'haozhu233@gmail.com', role = c('aut', 'cre'),
+    comment = c(ORCID = '0000-0002-3386-6076')),
+    person('Thomas', 'Travison', role = 'aut'，
+    comment = c(ORCID = '0000-0002-1030-7175')),
     person('Timothy', 'Tsai', role = 'ctb'),
-    person('Thomas', 'Travison', role = 'ctb'),
     person('Will', 'Beasley', email = 'wibeasley@hotmail.com', role = 'ctb'),
     person('Yihui', 'Xie', email = 'xie@yihui.name', role = 'ctb'),
     person('GuangChuang', 'Yu', email = 'guangchuangyu@gmail.com', role = 'ctb'),
