--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(linebreak)
 export(magic_mirror)
 export(rmd_format)
 export(row_spec)
+export(save_kable)
 export(scroll_box)
 export(spec_angle)
 export(spec_color)
@@ -45,6 +46,7 @@ importFrom(rmarkdown,html_dependency_bootstrap)
 importFrom(rmarkdown,html_dependency_jquery)
 importFrom(rmarkdown,latex_dependency)
 importFrom(rmarkdown,metadata)
+importFrom(rmarkdown,pandoc_self_contained_html)
 importFrom(rstudioapi,isAvailable)
 importFrom(rstudioapi,viewer)
 importFrom(rvest,html_table)
