--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,8 @@ export(footnote_marker_alphabet)
 export(footnote_marker_number)
 export(footnote_marker_symbol)
 export(group_rows)
+export(html_dependency_bsTable)
+export(html_dependency_kePrint)
 export(kable)
 export(kableExtra_latex_packages)
 export(kable_as_image)
