Add extra customization options to add_header_above

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(spec_popover)
 export(spec_tooltip)
 export(text_spec)
 export(usepackage_latex)
+export(xtable2kable)
 import(htmltools)
 importFrom(grDevices,col2rgb)
 importFrom(knitr,asis_output)
@@ -66,6 +67,7 @@ importFrom(stringr,str_replace_all)
 importFrom(stringr,str_split)
 importFrom(stringr,str_sub)
 importFrom(stringr,str_trim)
+importFrom(utils,capture.output)
 importFrom(utils,head)
 importFrom(utils,read.csv)
 importFrom(viridisLite,viridis)
