add line_sep to add_header_above

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -42,7 +42,8 @@ Imports:
     stats,
     grDevices,
     htmltools,
-    rstudioapi
+    rstudioapi,
+    glue
 Suggests:
     testthat,
     magick,
