--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(text_spec)
 export(usepackage_latex)
 export(xtable2kable)
 import(htmltools)
+importFrom(glue,glue)
 importFrom(grDevices,col2rgb)
 importFrom(knitr,asis_output)
 importFrom(knitr,include_graphics)
