--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,10 +68,13 @@ importFrom(stringr,str_replace_all)
 importFrom(stringr,str_split)
 importFrom(stringr,str_sub)
 importFrom(stringr,str_trim)
+importFrom(tools,file_ext)
+importFrom(tools,file_path_sans_ext)
 importFrom(utils,capture.output)
 importFrom(utils,head)
 importFrom(utils,read.csv)
 importFrom(viridisLite,viridis)
+importFrom(webshot,webshot)
 importFrom(xml2,"xml_attr<-")
 importFrom(xml2,"xml_text<-")
 importFrom(xml2,read_html)
