Protect LaTeX math in the HTML format:  see https://stackoverflow.com/q/54048265/2554330

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -45,7 +45,8 @@ Imports:
     rstudioapi,
     glue,
     tools,
-    webshot
+    webshot,
+    digest
 Suggests:
     testthat,
     magick,
@@ -53,5 +54,5 @@ Suggests:
     dplyr
 VignetteBuilder: knitr
 Encoding: UTF-8
-RoxygenNote: 6.1.0
+RoxygenNote: 6.1.1
 Roxygen: list(markdown = TRUE)
