Add as_image; Add xcolor back in but without options

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export("%>%")
 export(add_footnote)
 export(add_header_above)
 export(add_indent)
+export(as_image)
 export(auto_index)
 export(cell_spec)
 export(collapse_rows)
