Export kable_xml functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(html_dependency_kePrint)
 export(kable)
 export(kableExtra_latex_packages)
 export(kable_as_image)
+export(kable_as_xml)
 export(kable_styling)
 export(landscape)
 export(linebreak)
@@ -36,6 +37,7 @@ export(spec_popover)
 export(spec_tooltip)
 export(text_spec)
 export(usepackage_latex)
+export(xml_as_kable)
 export(xtable2kable)
 import(htmltools)
 importFrom(digest,digest)
