--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(kable_styling)
 export(landscape)
 export(linebreak)
 export(magic_mirror)
+export(pack_rows)
 export(rmd_format)
 export(row_spec)
 export(save_kable)
