--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -52,7 +52,8 @@ Suggests:
     testthat,
     magick,
     formattable,
-    dplyr
+    dplyr,
+    sparkline
 VignetteBuilder: knitr
 Encoding: UTF-8
 RoxygenNote: 6.1.1
