--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ export(auto_index)
 export(cell_spec)
 export(collapse_rows)
 export(column_spec)
+export(dummy_html_tbl)
+export(dummy_latex_tbl)
 export(footnote)
 export(footnote_marker_alphabet)
 export(footnote_marker_number)
@@ -92,6 +94,7 @@ importFrom(xml2,xml_attr)
 importFrom(xml2,xml_child)
 importFrom(xml2,xml_children)
 importFrom(xml2,xml_has_attr)
+importFrom(xml2,xml_length)
 importFrom(xml2,xml_name)
 importFrom(xml2,xml_remove)
 importFrom(xml2,xml_text)
