Fix bugs in remove_column

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(landscape)
 export(linebreak)
 export(magic_mirror)
 export(pack_rows)
+export(remove_column)
 export(rmd_format)
 export(row_spec)
 export(save_kable)
