Adding lightable theme

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,10 +20,14 @@ export(footnote_marker_symbol)
 export(group_rows)
 export(html_dependency_bsTable)
 export(html_dependency_kePrint)
+export(html_dependency_lightable)
 export(kable)
 export(kableExtra_latex_packages)
 export(kable_as_image)
 export(kable_as_xml)
+export(kable_classic)
+export(kable_material)
+export(kable_minimal)
 export(kable_styling)
 export(landscape)
 export(linebreak)
