Adding material dark

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(kable_as_image)
 export(kable_as_xml)
 export(kable_classic)
 export(kable_material)
+export(kable_material_dark)
 export(kable_minimal)
 export(kable_styling)
 export(landscape)
