--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(kableExtra_latex_packages)
 export(kable_as_image)
 export(kable_as_xml)
 export(kable_classic)
+export(kable_classic_2)
 export(kable_material)
 export(kable_material_dark)
 export(kable_minimal)
