* Added kable_paper style for a NYT like table * Let column_spec take conditional formats * Added html_font option for kable_styling

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(kable_classic_2)
 export(kable_material)
 export(kable_material_dark)
 export(kable_minimal)
+export(kable_paper)
 export(kable_styling)
 export(landscape)
 export(linebreak)
