--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(kable_material_dark)
 export(kable_minimal)
 export(kable_paper)
 export(kable_styling)
+export(kbl)
 export(landscape)
 export(linebreak)
 export(magic_mirror)
