added spec_image, spec_hist, spec_boxplot and fixed some cran comments

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,8 +41,11 @@ export(row_spec)
 export(save_kable)
 export(scroll_box)
 export(spec_angle)
+export(spec_boxplot)
 export(spec_color)
 export(spec_font_size)
+export(spec_hist)
+export(spec_image)
 export(spec_popover)
 export(spec_tooltip)
 export(text_spec)
@@ -53,6 +56,12 @@ import(htmltools)
 importFrom(digest,digest)
 importFrom(glue,glue)
 importFrom(grDevices,col2rgb)
+importFrom(grDevices,png)
+importFrom(grDevices,svg)
+importFrom(graphics,boxplot)
+importFrom(graphics,hist)
+importFrom(graphics,par)
+importFrom(graphics,text)
 importFrom(knitr,asis_output)
 importFrom(knitr,include_graphics)
 importFrom(knitr,kable)
@@ -69,6 +78,8 @@ importFrom(rstudioapi,viewer)
 importFrom(rvest,html_table)
 importFrom(scales,rescale)
 importFrom(stats,ave)
+importFrom(stats,density)
+importFrom(stats,median)
 importFrom(stringr,fixed)
 importFrom(stringr,str_count)
 importFrom(stringr,str_detect)
