--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(spec_font_size)
 export(spec_hist)
 export(spec_image)
 export(spec_line)
+export(spec_plot)
 export(spec_popover)
 export(spec_tooltip)
 export(text_spec)
