--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,7 +46,7 @@ export(spec_color)
 export(spec_font_size)
 export(spec_hist)
 export(spec_image)
-export(spec_line)
+export(spec_plot)
 export(spec_popover)
 export(spec_tooltip)
 export(text_spec)
