added header_separate function based on the suggestion in #541

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(footnote_marker_alphabet)
 export(footnote_marker_number)
 export(footnote_marker_symbol)
 export(group_rows)
+export(header_separate)
 export(html_dependency_bsTable)
 export(html_dependency_kePrint)
 export(html_dependency_lightable)
