--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ export(spec_font_size)
 export(spec_hist)
 export(spec_image)
 export(spec_plot)
+export(spec_pointrange)
 export(spec_popover)
 export(spec_tooltip)
 export(text_spec)
@@ -82,6 +83,8 @@ importFrom(scales,rescale)
 importFrom(stats,ave)
 importFrom(stats,density)
 importFrom(stats,median)
+importFrom(stats,na.omit)
+importFrom(stats,setNames)
 importFrom(stringr,fixed)
 importFrom(stringr,str_count)
 importFrom(stringr,str_detect)
