--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: kableExtra
 Type: Package
 Title: Construct Complex Table with 'kable' and Pipe Syntax
-Version: 1.3.1
+Version: 1.3.3
 Authors@R: c(
     person('Hao', 'Zhu', email = 'haozhu233@gmail.com', role = c('aut', 'cre'),
     comment = c(ORCID = '0000-0002-3386-6076')),
@@ -48,7 +48,8 @@ Imports:
     tools,
     webshot,
     digest,
-    graphics
+    graphics,
+    svglite
 Suggests:
     testthat,
     magick,
