--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(knit_print,kableExtra)
 S3method(print,kableExtra)
+S3method(print,kableExtraInlinePlots)
 export("%>%")
 export(add_footnote)
 export(add_header_above)
@@ -42,7 +43,6 @@ export(row_spec)
 export(save_kable)
 export(scroll_box)
 export(spec_angle)
-export(spec_barplot)
 export(spec_boxplot)
 export(spec_color)
 export(spec_font_size)
@@ -58,7 +58,6 @@ export(xml_as_kable)
 export(xtable2kable)
 import(htmltools)
 importFrom(digest,digest)
-importFrom(glue,glue)
 importFrom(grDevices,col2rgb)
 importFrom(grDevices,png)
 importFrom(grDevices,svg)
@@ -79,7 +78,6 @@ importFrom(rmarkdown,metadata)
 importFrom(rmarkdown,pandoc_self_contained_html)
 importFrom(rstudioapi,isAvailable)
 importFrom(rstudioapi,viewer)
-importFrom(rvest,html_table)
 importFrom(scales,rescale)
 importFrom(stats,ave)
 importFrom(stats,density)
