--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ export(usepackage_latex)
 export(xml_as_kable)
 export(xtable2kable)
 import(htmltools)
+import(parseLatex)
 importFrom(digest,digest)
 importFrom(grDevices,col2rgb)
 importFrom(grDevices,png)
