Start on rewriting magic_mirror_latex to use parseLatex. Use deparsed code for now, but it should keep the parsed code in the end.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,26 @@ importFrom(knitr,kable)
 importFrom(knitr,knit_meta_add)
 importFrom(knitr,knit_print)
 importFrom(magrittr,"%>%")
+importFrom(parseLatex,brace_options)
+importFrom(parseLatex,bracket_options)
+importFrom(parseLatex,columnOptions)
+importFrom(parseLatex,deparseLatex)
+importFrom(parseLatex,drop_items)
+importFrom(parseLatex,envName)
+importFrom(parseLatex,find_char)
+importFrom(parseLatex,find_macro)
+importFrom(parseLatex,get_container)
+importFrom(parseLatex,get_contents)
+importFrom(parseLatex,get_which)
+importFrom(parseLatex,is_env)
+importFrom(parseLatex,is_macro)
+importFrom(parseLatex,parseLatex)
+importFrom(parseLatex,path_to)
+importFrom(parseLatex,posOption)
+importFrom(parseLatex,tableContent)
+importFrom(parseLatex,tableNcol)
+importFrom(parseLatex,tableNrow)
+importFrom(parseLatex,tableRow)
 importFrom(rmarkdown,html_dependency_bootstrap)
 importFrom(rmarkdown,html_dependency_jquery)
 importFrom(rmarkdown,latex_dependency)
