--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(kable_material_dark)
 export(kable_minimal)
 export(kable_paper)
 export(kable_styling)
+export(kable_styling2)
 export(kbl)
 export(landscape)
 export(linebreak)
