row_spec2 updates work for all single args

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(pack_rows)
 export(remove_column)
 export(rmd_format)
 export(row_spec)
+export(row_spec2)
 export(save_kable)
 export(scroll_box)
 export(spec_angle)
