add_footnote2 now passes tests.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(print,kableExtra)
 S3method(print,kableExtraInlinePlots)
 export("%>%")
 export(add_footnote)
+export(add_footnote2)
 export(add_header_above)
 export(add_indent)
 export(as_image)
