add_header_above2 now passes tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export("%>%")
 export(add_footnote)
 export(add_footnote2)
 export(add_header_above)
+export(add_header_above2)
 export(add_indent)
 export(as_image)
 export(auto_index)
