group_rows/pack_rows now passes tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(footnote_marker_alphabet)
 export(footnote_marker_number)
 export(footnote_marker_symbol)
 export(group_rows)
+export(group_rows2)
 export(header_separate)
 export(html_dependency_bsTable)
 export(html_dependency_kePrint)
@@ -40,6 +41,7 @@ export(landscape)
 export(linebreak)
 export(magic_mirror)
 export(pack_rows)
+export(pack_rows2)
 export(remove_column)
 export(rmd_format)
 export(row_spec)
