tests working for add_indent

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(add_footnote2)
 export(add_header_above)
 export(add_header_above2)
 export(add_indent)
+export(add_indent2)
 export(as_image)
 export(auto_index)
 export(cell_spec)
