Done cell_spec2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(add_indent2)
 export(as_image)
 export(auto_index)
 export(cell_spec)
+export(cell_spec2)
 export(collapse_rows)
 export(column_spec)
 export(footnote)
