collapse_rows now passing tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(auto_index)
 export(cell_spec)
 export(cell_spec2)
 export(collapse_rows)
+export(collapse_rows2)
 export(column_spec)
 export(footnote)
 export(footnote_marker_alphabet)
