column_spec now passes tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(cell_spec2)
 export(collapse_rows)
 export(collapse_rows2)
 export(column_spec)
+export(column_spec2)
 export(footnote)
 export(footnote_marker_alphabet)
 export(footnote_marker_number)
