--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(collapse_rows2)
 export(column_spec)
 export(column_spec2)
 export(footnote)
+export(footnote2)
 export(footnote_marker_alphabet)
 export(footnote_marker_number)
 export(footnote_marker_symbol)
