--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(kable_styling)
 export(kable_styling2)
 export(kbl)
 export(landscape)
+export(landscape2)
 export(linebreak)
 export(magic_mirror)
 export(pack_rows)
