--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ export(landscape)
 export(landscape2)
 export(linebreak)
 export(magic_mirror)
+export(magic_mirror2)
 export(pack_rows)
 export(pack_rows2)
 export(remove_column)
@@ -65,6 +66,7 @@ export(spec_pointrange)
 export(spec_popover)
 export(spec_tooltip)
 export(text_spec)
+export(text_spec2)
 export(use_latex_packages)
 export(usepackage_latex)
 export(xml_as_kable)
