Adapt to parseLatex 0.4.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,11 +32,13 @@ export(kable_material_dark)
 export(kable_minimal)
 export(kable_paper)
 export(kable_styling)
+export(kable_to_parsed)
 export(kbl)
 export(landscape)
 export(linebreak)
 export(magic_mirror)
 export(pack_rows)
+export(parsed_to_kable)
 export(remove_column)
 export(rmd_format)
 export(row_spec)
