--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: kableExtra
 Type: Package
 Title: Construct Complex Table with 'kable' and Pipe Syntax
-Version: 1.4.0.13
+Version: 1.4.0.13.9000
 Authors@R: c(
     person('Hao', 'Zhu', email = 'haozhu233@gmail.com', role = c('aut', 'cre'),
     comment = c(ORCID = '0000-0002-3386-6076')),
@@ -53,7 +53,8 @@ Suggests:
     tinytex,
     formattable,
     sparkline,
-    webshot2
+    webshot2,
+    here
 Config/testthat/edition: 3
 VignetteBuilder: knitr
 Encoding: UTF-8
